[package]
name = "cats-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = {version="1.0.204", features=["derive"]}
serde_json = "1.0.120"
serde_yaml = "0.9.34"
yaml = "0.3.0"
